--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.3.0",
+    "@cantonjs/react-scroll-view": "^0.4.2",
     "@material-ui/core": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
@@ -12,8 +13,10 @@
     "express": "^4.17.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-native": "^0.63.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-scrollview": "0.0.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
