--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "@ant-design/icons": "^4.3.0",
     "@cantonjs/react-scroll-view": "^0.4.2",
     "@material-ui/core": "^4.11.2",
+    "@octokit/rest": "^18.0.12",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
     "antd": "^4.9.3",
     "express": "^4.17.1",
+    "octokit": "^1.0.0-hello-world",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-native": "^0.63.4",
