--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
     "antd": "^4.9.3",
+    "base-64": "^1.0.0",
     "express": "^4.17.1",
     "octokit": "^1.0.0-hello-world",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-markdown": "^5.0.3",
     "react-native": "^0.63.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-scrollview": "0.0.3",
+    "remark-code-blocks": "^2.0.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
