--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-scrollview": "0.0.3",
+    "react-syntax-highlighter": "^15.4.3",
     "remark-code-blocks": "^2.0.1",
     "web-vitals": "^0.2.4"
   },
