--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-markdown": "^5.0.3",
-    "react-native": "^0.63.4",
+    "react-native": "^0.67.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^5.0.0",
     "react-scroll": "^1.8.1",
-    "react-scrollview": "0.0.3",
+    "react-scrollview": "^0.0.1",
     "react-syntax-highlighter": "^15.4.3",
     "remark-code-blocks": "^2.0.1",
     "web-vitals": "^0.2.4"
