--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 # backend
 /env
 **/__pycache__/
+*.sqlite3
 
 # testing
 /coverage
@@ -25,7 +26,7 @@
 .env.test.local
 .env.production.local
 .eslintcache
-.vs
+.vscode
 
 npm-debug.log*
 yarn-debug.log*
