--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ wagtail = "^5.2"
 ariadne = "^0.21"
 ariadne-django = "^0.3.0"
 ruff = "^0.1.7"
+wagtail-headless-preview = "^0.7.0"
 
 [tool.ruff.lint]
 select = [
