Add nextjs files

--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,13 @@
 /node_modules
 /.pnp
 .pnp.js
+.yarn/install-state.gz
 
-# frontend
-/public
+# testing
+/coverage
+
+# frontend old REMOVE
+/frontend-old
 
 # backend
 /env
@@ -14,21 +18,29 @@
 *.sqlite3
 .ruff_cache
 
-# testing
-/coverage
+# next.js
+.next/
+out/
 
 # production
 /build
 
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-.eslintcache
+*.pem
 .vscode
 
+# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# local env files
+.env*.local
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
