--- a/package.json
+++ b/package.json
@@ -1,61 +1,29 @@
 {
-  "name": "website",
+  "name": "frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
     "lint": "npm run lint:py",
+    "lint:ts": "next lint",
     "lint:py": "poetry run ruff check src/",
     "fix": "npm run fix:py",
     "fix:py": "poetry run ruff format src/ && poetry run ruff check src/ --fix"
   },
   "dependencies": {
-    "@ant-design/icons": "^4.3.0",
-    "@cantonjs/react-scroll-view": "^0.4.2",
-    "@material-ui/core": "^4.11.2",
-    "@octokit/rest": "^18.0.12",
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^12.5.0",
-    "ansi-regex": ">=5.0.1",
-    "antd": "^4.9.3",
-    "base-64": "^1.0.0",
-    "express": "^4.17.1",
-    "node-fetch": ">=2.6.7",
-    "nth-check": ">=2.0.1",
-    "octokit": "^1.0.0-hello-world",
-    "postcss": ">=8.2.13",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-markdown": "^5.0.3",
-    "react-native": "^0.67.1",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "^5.0.0",
-    "react-scroll": "^1.8.1",
-    "react-scrollview": "^0.0.1",
-    "react-syntax-highlighter": "^15.4.3",
-    "remark-code-blocks": "^2.0.1",
-    "web-vitals": "^0.2.4"
+    "antd": "^5.12.2",
+    "next": "14.0.4",
+    "react": "^18",
+    "react-dom": "^18"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.4",
+    "typescript": "^5"
   }
 }
