--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "antd": "^5.12.2",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "urql": "^4.0.6"
   },
   "devDependencies": {
     "@types/node": "^20",
