--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ ariadne-django = "^0.3.0"
 ruff = "^0.1.7"
 wagtail-headless-preview = "^0.7.0"
 django-cors-headers = "^4.3.1"
+python-environ = "^0.4.54"
 
 [tool.ruff.lint]
 select = [
