--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
   },
   "dependencies": {
     "antd": "^5.12.2",
+    "base-64": "^1.0.0",
     "next": "14.0.4",
+    "octokit": "^3.1.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-markdown": "^9.0.1",
+    "react-syntax-highlighter": "^15.5.0",
     "urql": "^4.0.6"
   },
   "devDependencies": {
