--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ ruff = "^0.1.7"
 wagtail-headless-preview = "^0.7.0"
 django-cors-headers = "^4.3.1"
 python-environ = "^0.4.54"
+dj-database-url = "^2.1.0"
+psycopg2-binary = "^2.9.9"
+gunicorn = "^21.2.0"
 
 [tool.ruff.lint]
 select = [
@@ -22,7 +25,7 @@ select = [
     "F",
     "I"
 ]
-ignore = ["F403", "E501"]
+ignore = ["F403", "F405", "E501"]
 
 [build-system]
 requires = ["poetry-core"]
