--- a/render.yaml
+++ b/render.yaml
@@ -8,7 +8,7 @@ services:
   - type: web
     name: personal_website
     runtime: python
-    buildCommand: "./build.sh"
+    buildCommand: "./scripts/build.sh"
     startCommand: "gunicorn src.wsgi:application"
     plan: free
     envVars:
