--- a/render.yaml
+++ b/render.yaml
@@ -24,3 +24,7 @@ services:
         generateValue: true
       - key: DJANGO_SETTINGS_MODULE
         value: src.settings.production
+      - key: FRONTEND_URL
+        value: szymondawi.dev
+      - key: BACKEND_URL
+        value: https://personal-website-9pqt.onrender.com
