--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ python-environ = "^0.4.54"
 dj-database-url = "^2.1.0"
 psycopg2-binary = "^2.9.9"
 gunicorn = "^21.2.0"
+whitenoise = {extras = ["brotli"], version = "^6.6.0"}
 
 [tool.ruff.lint]
 select = [
