Fix assorted frontend issues

--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "@graphql-codegen/cli": "^5.0.0",
     "@graphql-codegen/client-preset": "^4.1.0",
     "@graphql-codegen/typescript-urql": "^4.0.0",
+    "@types/base-64": "^1.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-syntax-highlighter": "^15.5.11",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "graphql": "^16.8.1",
