--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ databases:
   - name: personal_website
     databaseName: personal_website
     user: personal_website
-    plan: free
+    plan: starter
 
 services:
   - type: web
@@ -10,7 +10,7 @@ services:
     runtime: python
     buildCommand: "./scripts/build.sh"
     startCommand: "gunicorn src.wsgi:application"
-    plan: free
+    plan: starter
     envVars:
       - key: DATABASE_URL
         fromDatabase:
