--- a/render.yaml
+++ b/render.yaml
@@ -16,7 +16,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: personal_website
+          name: personalWebsiteDbProd
           property: connectionString
       - key: SECRET_KEY
         generateValue: true
