--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ gunicorn = "^21.2.0"
 whitenoise = {extras = ["brotli"], version = "^6.6.0"}
 django-storages = "^1.14.2"
 boto3 = "^1.34.35"
+wagtail-storages = "^1.0.0"
 
 [tool.ruff.lint]
 select = [
