--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "antd": "^5.12.2",
     "base-64": "^1.0.0",
+    "html-react-parser": "^5.1.2",
     "next": "14.0.4",
     "octokit": "^3.1.2",
     "react": "^18",
