--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-Django = "^4.2"
-wagtail = "^5.2"
+wagtail = "6.1"
 ariadne = "^0.21"
 ariadne-django = "^0.3.0"
 ruff = "^0.1.7"
@@ -21,6 +20,7 @@ gunicorn = "^21.2.0"
 whitenoise = {extras = ["brotli"], version = "^6.6.0"}
 django-storages = "^1.14.2"
 boto3 = "^1.34.35"
+django = "^5"
 
 [tool.ruff.lint]
 select = [
