--- a/package.json
+++ b/package.json
@@ -16,13 +16,18 @@
   "dependencies": {
     "antd": "^5.12.2",
     "base-64": "^1.0.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "html-react-parser": "^5.1.2",
+    "lucide-react": "^0.436.0",
     "next": "14.0.4",
     "octokit": "^3.1.2",
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
     "react-syntax-highlighter": "^15.5.0",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
     "urql": "^4.0.6"
   },
   "devDependencies": {
@@ -37,6 +42,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "graphql": "^16.8.1",
+    "tailwindcss": "^3.4.10",
     "typescript": "^5.3.3"
   }
 }
