--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,56 @@
-Django>=4.2,<4.3
-wagtail>=5.2,<5.3
+anyascii==0.3.2 ; python_version >= "3.11" and python_version < "4.0"
+anyio==4.1.0 ; python_version >= "3.11" and python_version < "4.0"
+ariadne-django==0.3.0 ; python_version >= "3.11" and python_version < "4.0"
+ariadne==0.21 ; python_version >= "3.11" and python_version < "4.0"
+asgiref==3.7.2 ; python_version >= "3.11" and python_version < "4.0"
+beautifulsoup4==4.11.2 ; python_version >= "3.11" and python_version < "4.0"
+boto3==1.34.35 ; python_version >= "3.11" and python_version < "4.0"
+botocore==1.34.35 ; python_version >= "3.11" and python_version < "4.0"
+brotli==1.1.0 ; python_version >= "3.11" and python_version < "4.0"
+certifi==2023.11.17 ; python_version >= "3.11" and python_version < "4.0"
+charset-normalizer==3.3.2 ; python_version >= "3.11" and python_version < "4.0"
+defusedxml==0.7.1 ; python_version >= "3.11" and python_version < "4.0"
+dj-database-url==2.1.0 ; python_version >= "3.11" and python_version < "4.0"
+django-cors-headers==4.3.1 ; python_version >= "3.11" and python_version < "4.0"
+django-filter==23.5 ; python_version >= "3.11" and python_version < "4.0"
+django-modelcluster==6.1 ; python_version >= "3.11" and python_version < "4.0"
+django-permissionedforms==0.1 ; python_version >= "3.11" and python_version < "4.0"
+django-storages==1.14.2 ; python_version >= "3.11" and python_version < "4.0"
+django-taggit==4.0.0 ; python_version >= "3.11" and python_version < "4.0"
+django-treebeard==4.7 ; python_version >= "3.11" and python_version < "4.0"
+django==4.2.8 ; python_version >= "3.11" and python_version < "4.0"
+djangorestframework==3.14.0 ; python_version >= "3.11" and python_version < "4.0"
+draftjs-exporter==2.1.7 ; python_version >= "3.11" and python_version < "4.0"
+et-xmlfile==1.1.0 ; python_version >= "3.11" and python_version < "4.0"
+filetype==1.2.0 ; python_version >= "3.11" and python_version < "4.0"
+graphql-core==3.2.3 ; python_version >= "3.11" and python_version < "4"
+gunicorn==21.2.0 ; python_version >= "3.11" and python_version < "4.0"
+html5lib==1.1 ; python_version >= "3.11" and python_version < "4.0"
+idna==3.6 ; python_version >= "3.11" and python_version < "4.0"
+jmespath==1.0.1 ; python_version >= "3.11" and python_version < "4.0"
+l18n==2021.3 ; python_version >= "3.11" and python_version < "4.0"
+openpyxl==3.1.2 ; python_version >= "3.11" and python_version < "4.0"
+packaging==23.2 ; python_version >= "3.11" and python_version < "4.0"
+pillow-heif==0.14.0 ; python_version < "4.0" and python_version >= "3.11"
+pillow==10.1.0 ; python_version >= "3.11" and python_version < "4.0"
+psycopg2-binary==2.9.9 ; python_version >= "3.11" and python_version < "4.0"
+python-dateutil==2.8.2 ; python_version >= "3.11" and python_version < "4.0"
+python-environ==0.4.54 ; python_version >= "3.11" and python_version < "4.0"
+pytz==2023.3.post1 ; python_version >= "3.11" and python_version < "4.0"
+requests==2.31.0 ; python_version >= "3.11" and python_version < "4.0"
+ruff==0.1.7 ; python_version >= "3.11" and python_version < "4.0"
+s3transfer==0.10.0 ; python_version >= "3.11" and python_version < "4.0"
+six==1.16.0 ; python_version >= "3.11" and python_version < "4.0"
+sniffio==1.3.0 ; python_version >= "3.11" and python_version < "4.0"
+soupsieve==2.5 ; python_version >= "3.11" and python_version < "4.0"
+sqlparse==0.4.4 ; python_version >= "3.11" and python_version < "4.0"
+starlette==0.33.0 ; python_version >= "3.11" and python_version < "4.0"
+telepath==0.3.1 ; python_version >= "3.11" and python_version < "4.0"
+typing-extensions==4.8.0 ; python_version >= "3.11" and python_version < "4.0"
+tzdata==2023.3 ; python_version >= "3.11" and python_version < "4.0" and sys_platform == "win32"
+urllib3==2.0.7 ; python_version >= "3.11" and python_version < "4.0"
+wagtail-headless-preview==0.7.0 ; python_version >= "3.11" and python_version < "4.0"
+wagtail==5.2.1 ; python_version >= "3.11" and python_version < "4.0"
+webencodings==0.5.1 ; python_version >= "3.11" and python_version < "4.0"
+whitenoise[brotli]==6.6.0 ; python_version >= "3.11" and python_version < "4.0"
+willow[heif]==1.6.3 ; python_version >= "3.11" and python_version < "4.0"
