--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,16 @@
 {
     "version": 2,
-    "rewrites": [{ "source": "/(.*)", "destination": "src/wsgi.py" }]
+    "builds": [
+      {
+        "src": "src/wsgi.py",
+        "use": "@vercel/python",
+        "config": { "maxLambdaSize": "15mb", "runtime": "python3.11", "buildCommand": "./scripts/build.sh" }
+      }
+    ],
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "src/wsgi.py"
+      }
+    ]
 }
