--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
       {
         "src": "src/wsgi.py",
         "use": "@vercel/python",
-        "config": { "maxLambdaSize": "15mb", "runtime": "python3.11", "buildCommand": "bash ./scripts/build.sh" }
+        "config": { "maxLambdaSize": "15mb", "runtime": "python3.11"}
       },
       {
         "src": "scripts/build.sh",
